--- a/templates/word.html
+++ b/templates/word.html
@@ -16,21 +16,23 @@
 
 <div class="row justify-content-md-center">
     <div class="col-sm-12 col-md-6 col-lg-5">
+        {% if study_mode %}
         <div class="input-group mt-1 mb-3 shadow">
             {% if current_index - 1 != 0 %}
-            <button onclick="location.href=`{{url_for('WordView:get_word', word_id=ids[current_index - 2])}}`"
+            <button onclick="location.href=`{{url_for('WordView:get_word', word_ids=True, word_id=ids[current_index - 2])}}`"
                 class="btn btn-dark form-control btn-lg"><i class="fas fa-arrow-left"></i></button>
             {% endif %}
 
             <button class="btn btn-outline-dark form-control btn-lg">{{current_index}} / {{deck_length}}</button>
 
             {% if current_index < deck_length %} <button
-                onclick="location.href=`{{url_for('WordView:get_word', word_id=ids[current_index])}}`"
+                onclick="location.href=`{{url_for('WordView:get_word', word_ids=True, word_id=ids[current_index])}}`"
                 class="btn btn-dark form-control btn-lg">
                 <i class="fas fa-arrow-right"></i>
                 </button>
             {% endif %}
         </div>
+        {% endif %}
         <div class="card shadow mt-2 p-4 {{[word_dict['artikel'], word_dict['type']]|word_background}}">
             <div class="lead {{word_dict['type']|word_text_color}}">{{word_dict["artikel"]}} {{word_dict["word"]}}</div>
             {% if word_dict["sentence"] %}
