--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container pt-2 pb-2">
         {% if message %}
-        <div class="alert shadow alert-warning alert-dismissible fade show" role="alert">
+        <div class="mb-0 alert shadow alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
