--- a/templates/words.html
+++ b/templates/words.html
@@ -10,17 +10,18 @@
 
 {% block body %}
 
-<h5 class="mb-3 mt-2">{{type.title()}}s:</h5>
-<div class="row">
-    <div class="col-md-8 col-lg-6">
+
+<div class="row justify-content-md-center">
+    <div class="col-md-8 col-lg-6 p-3">
+        <h5 class="mb-3">{{type.title()}}s:</h5>
         <button onclick="location.href=`{{url_for('WordView:get_word', shuffle_words=True, shuffle_study=True, type=type)}}`" class="btn-lg shadow btn btn-dark mb-1 w-100"><i class="fas fa-random"></i>&nbsp;&nbsp;Shuffle study</button>
         <button onclick="location.href=`{{url_for('MainView:index')}}`" class="btn-lg shadow btn btn-warning mb-3 w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add new word</button>
         {% if not words %}
         <span>No words</span>
         {% endif %}
         {% for word in words %}
-        <div class="shadow">
-            <div class="input-group mb-2">
+        <div>
+            <div class="input-group mb-2 shadow">
                 <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word['_id'])}}`"
                     class="input-group-text"><i class="fas fa-arrow-right"></i></button>
                 <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word['_id'])}}`"
