--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -11,7 +11,10 @@
 
 
 <div class="row justify-content-md-center p-2">
-  <div class="col-sm-12 col-md-6 col-lg-5 card shadow p-4">
+  <div class="col-md-6 card shadow p-4 mb-2">
+    {% include 'snippets/intro.html' %}
+  </div>
+  <div class="col-md-6 card shadow p-4">
     <form action="{{url_for('register')}}" method="post">
       <h3 class="mb-3">Register:</h3>
       <div class="form-group">
@@ -37,10 +40,10 @@
           required>
         <small id="emailHelp" class="form-text text-muted">Confirm your password</small>
       </div>
-      <button type="submit " class="btn btn-warning mt-3 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
+      <button type="submit " class="shadow btn btn-warning mt-3 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
       
     </form>
-    <button onclick="location.href=`{{url_for('login')}}`" class="btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
+    <button onclick="location.href=`{{url_for('login')}}`" class="shadow btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
 
   </div>
 </div>
