--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -23,8 +23,8 @@
                 <textarea class="form-control" name="sentence_eng" placeholder="English sentence"></textarea>
             </div>
 
-            <div class="input-group mb-3 shadow">
-                <button type="submit" class="btn btn-warning w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
+            <div class="input-group shadow">
+                <button type="submit" class="btn-lg btn btn-warning w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
             </div>
         </label>
     </form>
@@ -57,8 +57,8 @@
                     placeholder="English sentence">{{word_dict['sentence_eng']}}</textarea>
             </div>
 
-            <div class="input-group mb-3 shadow">
-                <button type="submit" class="btn btn-warning w-100"><i
+            <div class="input-group shadow">
+                <button type="submit" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-save"></i>&nbsp;&nbsp;Update</button>
             </div>
         </label>
