--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -11,8 +11,11 @@
 
 
 <div class="row justify-content-md-center p-2">
-  <div class="col-md-6 card shadow p-4 mb-2">
+  <div class="col-md-5 mb-3">
     {% include 'snippets/intro.html' %}
+  </div>
+  <div class="col-md-1">
+
   </div>
   <div class="col-md-6 card shadow p-4">
     <form action="{{url_for('register')}}" method="post">
