--- a/templates/snippets/type_selector.html
+++ b/templates/snippets/type_selector.html
@@ -6,4 +6,5 @@
     <option value="adjective">Adjective</option>
     <option value="adverb">Adverb</option>
     <option value="phrase">Phrase</option>
+    <option value="preposition">Preposition</option>
 </select>
