--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -51,7 +51,7 @@
                     value="{{word_dict['word']}}">
             </div>
 
-            <div class="plural-input input-group mb-3 shadow-sm d-none">
+            <div class="plural-input input-group mb-3 shadow-sm">
                 <input type="text" class="form-control" name="plural" placeholder="Plural" value="{{word_dict['plural']}}">
             </div>
             
