update toggle + sytle

--- a/templates/snippets/intro.html
+++ b/templates/snippets/intro.html
@@ -1,5 +1,8 @@
-<div>
-    <span>Store German words with sentence examples and study in shuffle mode.</span><br>
-    <span>This is a free educational tool by <a href="https://www.linkedin.com/in/gokasci/" target="_blank">Göktuğ Aşcı</a>.</span><br>
-    <span>Designed for mobile phones.</span>
+<div class="card p-3 shadow">
+    <text>Store German words with sentence examples and study in shuffle mode.</text>
+    <hr>
+    <text>Designed for mobile phones.</text>
+    <hr>
+    <text>This is a free educational tool by <a href="https://www.linkedin.com/in/gokasci/" class="text-danger"" target="_blank">Göktuğ
+            Aşcı</a>.</text>
 </div>
