--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -12,6 +12,6 @@
     <form class="d-flex" action="{{url_for('WordView:search')}}">
         <input class="form-control me-2 shadow-sm" name="word" type="search" placeholder="Word" aria-label="Search"
             required>
-        <button class="btn btn-outline-success shadow-sm" type="submit">Search</button>
+        <button class="btn btn-warning shadow-sm" type="submit">Search</button>
     </form>
 </div>
