--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="row justify-content-md-center p-2">
-  <div class="col-md-5 mb-3">
+  <div class="col-md-5 mb-2 p-0">
     {% include 'snippets/intro.html' %}
   </div>
   <div class="col-md-1">
@@ -22,10 +22,10 @@
         <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
         <small id="emailHelp" class="form-text text-muted">Enter your password</small>
       </div>
-      <button type="submit" class="shadow btn btn-warning mt-3 w-100"><i class=" fas fa-sign-in-alt"></i>&nbsp;&nbsp;Log in</button>
+      <button type="submit" class="btn-lg shadow btn btn-warning mt-3 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Log in</button>
 
     </form>
-    <button onclick="location.href=`{{url_for('register')}}`" class="shadow btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
+    <button onclick="location.href=`{{url_for('register')}}`" class="btn-lg shadow btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
   </div>
 </div>
 </div>
