--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success shadow-sm">
     <div class="container">
         {% block back_button %}{% endblock %}
         
