--- a/templates/index.html
+++ b/templates/index.html
@@ -7,29 +7,31 @@
 
 <div class="row p-2">
     {% if not word_dict %}
-    <div class="col-md-5 col-lg-5 mb-3">
-        <h5 class="mb-3">Study:</h5>
-        {% if not types %}
-        <span>No words</span>
-        {% endif %}
+    <div class="col-md-5 col-lg-5 mb-2 p-0">
+        <div class="p-3 card shadow">
+            <h5 class="mb-3">Study:</h5>
+            {% if not types %}
+            <span>No words</span>
+            {% endif %}
 
-        {% for type in types %}
-        <div>
-            <div class="input-group mb-2">
-                <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`" class="btn-lg input-group-text shadow"><i
-                        class="fas fa-arrow-right"></i></button>
-                <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`"
-                    class="btn-lg form-control btn btn-success shadow" style="text-align:left"
-                    type="button">{{type.title()}}s</button>
+            {% for type in types %}
+            <div>
+                <div class="input-group mb-2">
+                    <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`"
+                        class="btn-lg input-group-text shadow"><i class="fas fa-arrow-right"></i></button>
+                    <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`"
+                        class="btn-lg form-control btn btn-success shadow" style="text-align:left"
+                        type="button">{{type.title()}}s</button>
+                </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
     <div class="col-md-1 col-lg-1">
 
     </div>
     {% endif %}
-    
+
     {% if session['user_id'] %}
     <div class="card shadow p-3 col-md-6 col-lg-6">
         {% include 'snippets/add_update.html' %}
