--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -27,6 +27,10 @@
                 <textarea class="form-control" name="sentence_eng" placeholder="English sentence"></textarea>
             </div>
 
+            <div class="input-group mb-3 shadow-sm">
+                <input type="text" class="form-control" name="pronunciation" placeholder="Pronunciation">
+            </div>
+
             <div class="input-group shadow">
                 <button type="submit" class="btn-lg btn btn-warning w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
             </div>
@@ -63,6 +67,10 @@
             <div class="input-group mb-3 shadow-sm">
                 <textarea class="form-control" name="sentence_eng"
                     placeholder="English sentence">{{word_dict['sentence_eng']}}</textarea>
+            </div>
+
+            <div class="input-group mb-3 shadow-sm">
+                <input type="text" class="form-control" name="pronunciation" placeholder="Pronunciation" value="{{word_dict['pronunciation']}}">
             </div>
 
             <div class="input-group shadow">
