--- a/templates/snippets/back_button.html
+++ b/templates/snippets/back_button.html
@@ -1,5 +1,2 @@
-<button type="button" class="btn btn-light btn-lg" onclick="location.href='{{back_link}}'"><i
-        class="fas fa-arrow-left"></i></button>
-
-        <!--  -->
-        <!--  -->
+<button type="button" class="btn btn-success btn-lg" onclick="location.href='{{back_link}}'"><i
+                class="fas fa-arrow-left"></i></button>
