--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -43,10 +43,10 @@
           required>
         <small id="emailHelp" class="form-text text-muted">Confirm your password</small>
       </div>
-      <button type="submit " class="btn-lg shadow btn btn-warning mt-3 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
+      <button type="submit " class="btn-lg shadow-sm btn btn-warning mt-3 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
       
     </form>
-    <button onclick="location.href=`{{url_for('login')}}`" class="btn-lg shadow btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
+    <button onclick="location.href=`{{url_for('login')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
 
   </div>
 </div>
