--- a/templates/snippets/back_button.html
+++ b/templates/snippets/back_button.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn-success btn-lg" onclick="location.href='{{back_link}}'"><i
+<button type="button" class="btn btn-dark btn-lg" onclick="location.href='{{back_link}}'"><i
                 class="fas fa-arrow-left"></i></button>
