--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -22,10 +22,10 @@
         <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
         <small id="emailHelp" class="form-text text-muted">Enter your password</small>
       </div>
-      <button type="submit" class="btn-lg shadow btn btn-warning mt-3 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Log in</button>
+      <button type="submit" class="btn-lg shadow-sm btn btn-warning mt-3 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Log in</button>
 
     </form>
-    <button onclick="location.href=`{{url_for('register')}}`" class="btn-lg shadow btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
+    <button onclick="location.href=`{{url_for('register')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
   </div>
 </div>
 </div>
