--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<div class="row p-2">
+<div class="row p-2 justify-content-md-center">
     {% if not word_dict %}
     <div class="col-md-5 col-lg-5 mb-2 p-0">
         <div class="p-3 card shadow">
