--- a/templates/snippets/type_selector.html
+++ b/templates/snippets/type_selector.html
@@ -7,4 +7,5 @@
     <option value="adverb">Adverb</option>
     <option value="phrase">Phrase</option>
     <option value="preposition">Preposition</option>
+    <option value="prononun">Pronoun</option>
 </select>
