--- a/templates/words.html
+++ b/templates/words.html
@@ -2,11 +2,11 @@
 
 {% block title %}Words{% endblock %}
 
-{% block back_button %}
+<!-- {% block back_button %}
 {% with back_link=url_for('MainView:index')%}
 {% include "snippets/back_button.html" %}
 {% endwith %}
-{% endblock %}
+{% endblock %} -->
 
 {% block body %}
 
