--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
             <span>No words</span>
             {% endif %}
 
+            {% if types %}
+            <button onclick="location.href=`{{url_for('WordView:get_word', shuffle_words=True, shuffle_study=True)}}`" class="btn-lg shadow btn btn-warning mb-2 w-100"><i class="fas fa-random"></i>&nbsp;&nbsp;Shuffle study</button>
+            {% endif %}
             {% for type in types %}
             <div>
                 <div class="input-group mb-2">
