--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -12,7 +12,7 @@
         </li>
         {% endif %}
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('logout')}}">&nbsp;<i
+            <a class="nav-link active" aria-current="page" href="{{url_for('AuthView:logout_auth')}}">&nbsp;<i
                     class="fas fa-sign-out"></i>&nbsp;&nbsp;Logout</a>
         </li>
     </ul>
