--- a/templates/snippets/logged_out_nav.html
+++ b/templates/snippets/logged_out_nav.html
@@ -6,10 +6,10 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('login')}}">&nbsp;<i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('AuthView:login_auth')}}">&nbsp;<i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('register')}}">&nbsp;<i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('AuthView:register_auth')}}">&nbsp;<i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</a>
         </li> 
     </ul>
 </div>
