--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -10,7 +10,7 @@
     
   </div>
   <div class="col-md-6 card shadow p-4">
-    <form action="{{url_for('login')}}" method="post">
+    <form action="{{url_for('AuthView:login_auth')}}" method="post">
       <h3 class="mb-3">Login:</h3>
       <div class="form-group">
         <label for="InputEmail">Email address</label>
@@ -25,7 +25,7 @@
       <button type="submit" class="btn-lg shadow-sm btn btn-warning mt-3 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Log in</button>
 
     </form>
-    <button onclick="location.href=`{{url_for('register')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
+    <button onclick="location.href=`{{url_for('AuthView:register_auth')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
   </div>
 </div>
 </div>
