--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -18,7 +18,7 @@
 
   </div>
   <div class="col-md-6 card shadow p-4">
-    <form action="{{url_for('register')}}" method="post">
+    <form action="{{url_for('AuthView:register_auth')}}" method="post">
       <h3 class="mb-3">Register:</h3>
       <div class="form-group">
         <label for="Fullname">Full name</label>
@@ -46,7 +46,7 @@
       <button type="submit " class="btn-lg shadow-sm btn btn-warning mt-3 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
       
     </form>
-    <button onclick="location.href=`{{url_for('login')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
+    <button onclick="location.href=`{{url_for('AuthView:login_auth')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</button>
 
   </div>
 </div>
