--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark shadow-sm">
     <div class="container">
         {% block back_button %}{% endblock %}
         
@@ -40,7 +40,7 @@
 </nav>
 
 <body>
-    <div class="container pt-2 pb-2">
+    <div class="container pt-2 mt-5 pb-2">
         {% if message %}
         <div class="mb-0 alert shadow alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
