--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark shadow-sm">
+<nav class="navbar navbar-expand-lg {% block fixed_navbar %}{% endblock %} navbar-dark bg-dark shadow-sm">
     <div class="container">
         {% block back_button %}{% endblock %}
         
@@ -40,7 +40,7 @@
 </nav>
 
 <body>
-    <div class="container pt-2 mt-5 pb-2">
+    <div class="container pt-2 pb-2">
         {% if message %}
         <div class="mb-0 alert shadow alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
@@ -49,6 +49,7 @@
         {% endif %}
         {% block body %}{% endblock %}
     </div>
+    <!-- <div class="fixed-bottom">...</div> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
