--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,20 @@
             {% endif %}
 
             {% if types %}
-            <button onclick="location.href=`{{url_for('WordView:get_word', shuffle_words=True, shuffle_study=True)}}`" class="btn-lg shadow btn btn-warning mb-2 w-100"><i class="fas fa-random"></i>&nbsp;&nbsp;Shuffle study</button>
+            <form action="{{url_for('WordView:get_word')}}" id="shuffle-study">
+                <div class="input-group mb-2 shadow-sm">
+                    <input type="hidden" name="shuffle_words" value="" />
+                    <input type="hidden" name="shuffle_study" value="" />
+                    <input type="hidden" name="difficulty" value="" />
+                    <select class="form-select" id="difficulty-select">
+                        <option selected value="1">Learning</option>
+                        <option value="0">Learned</option>
+                        <option value="2">All</option>
+                    </select>
+                    <button onclick="shuffleStudy()" class="btn-lg  btn btn-warning"><i
+                            class="fas fa-random"></i>&nbsp;&nbsp;Study</button>
+                </div>
+            </form>
             {% endif %}
             {% for type in types %}
             <div>
@@ -44,5 +57,21 @@
 
 
 <!-- {{words}} -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+
+    shuffleStudy = () => {
+
+        var formInfo = document.forms['shuffle-study'];
+        formInfo.shuffle_words.value = true
+        formInfo.shuffle_study.value = true
+        formInfo.difficulty.value = $("#difficulty-select").val()
+        $("#shuffle-study").submit()
+
+    }
+
+</script>
 
 {% endblock %}
