--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -32,7 +32,8 @@
             </div>
 
             <div class="input-group shadow">
-                <button type="submit" class="btn-lg btn btn-warning w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
+                <button type="submit" class="btn-lg btn btn-warning w-100"><i
+                        class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
             </div>
         </label>
     </form>
@@ -41,7 +42,7 @@
     <h5>Update a word:</h5>
     <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
-            <input type="hidden" name="word_id" value="{{word_id}}" />
+            <input type="hidden" name="word_id" value="{{word_dict['_id']}}">
             <div class="input-group mb-3 shadow-sm">
                 {% include 'snippets/type_selector.html' %}
             </div>
@@ -51,14 +52,15 @@
             </div>
 
             <div class="input-group mb-3 shadow-sm">
-                <input type="text" class="form-control" name="word" placeholder="Word" required
+                <input id="word-name" type="text" class="form-control" name="word" placeholder="Word" required
                     value="{{word_dict['word']}}">
             </div>
 
             <div class="plural-input input-group mb-3 shadow-sm d-none">
-                <input type="text" class="form-control" name="plural" placeholder="Plural" value="{{word_dict['plural']}}">
+                <input type="text" class="form-control" name="plural" placeholder="Plural"
+                    value="{{word_dict['plural']}}">
             </div>
-            
+
             <div class="input-group mb-3 shadow-sm">
                 <textarea class="form-control" name="sentence"
                     placeholder="German sentence">{{word_dict['sentence']}}</textarea>
@@ -70,11 +72,12 @@
             </div>
 
             <div class="input-group mb-3 shadow-sm">
-                <input type="text" class="form-control" name="pronunciation" placeholder="Pronunciation" value="{{word_dict['pronunciation']}}">
+                <input type="text" class="form-control" name="pronunciation" placeholder="Pronunciation"
+                    value="{{word_dict['pronunciation']}}">
             </div>
 
             <div class="input-group shadow">
-                <button type="submit" class="btn-lg btn btn-warning w-100"><i
+                <button type="button" onclick="updateWord()" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-save"></i>&nbsp;&nbsp;Update</button>
             </div>
         </label>
@@ -83,29 +86,61 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
 
 <script>
-    $("#type-select").on('change', () => {
-        if ($("#type-select").val() === "noun") {
-            $(".artikel-selector-dev, .plural-input").removeClass("d-none")
-        } else {
-            $(".artikel-selector-dev, .plural-input").addClass("d-none")
-        }
-    });
+    $(() => {
+        $("#type-select").on('change', () => {
+            if ($("#type-select").val() === "noun") {
+                $(".artikel-selector-dev, .plural-input").removeClass("d-none")
+            } else {
+                $(".artikel-selector-dev, .plural-input").addClass("d-none")
+            }
+        });
+    })
 </script>
 
 {% if word_dict %}
 <script>
-    $("#type-select").val("{{word_dict['type']}}");
+    $(() => {
+        $("#type-select").val("{{word_dict['type']}}");
 
-    if ($("#type-select").val() !== "noun"){
-        $(".artikel-selector-dev").addClass("d-none")
-    } else {
-        $(".plural-input").removeClass("d-none")
-        $("#artikel-select").val("{{word_dict['artikel']}}");
+        if ($("#type-select").val() !== "noun") {
+            $(".artikel-selector-dev").addClass("d-none")
+        } else {
+            $(".plural-input").removeClass("d-none")
+            $("#artikel-select").val("{{word_dict['artikel']}}");
+        }
+    })
+
+    updateWord = () => {
+
+        // console.log($("[name='word']").val())
+
+        $.ajax({
+            url: `{{url_for('WordView:add_update_word')}}`,
+            type: "GET",
+            dataType: 'json',
+            contentType: "application/json",
+            data: {
+                "word": $("#word-name").val(),
+                "word_id": "{{word_dict['_id']}}",
+                "plural": $("[name='plural']").val(),
+                "sentence": $("[name='sentence']").val(),
+                "sentence_eng": $("[name='sentence_eng']").val(),
+                "pronunciation": $("[name='pronunciation']").val(),
+                "type": $("[name='type']").val(),
+                "artikel": $("[name='artikel']").val(),
+                "update": 1
+            },
+            success: () => {
+                history.back(1);
+            }
+        })
     }
+
+
 </script>
 {% endif %}
